fix: page alignment issue

--- a/src/components/atoms/container/container.module.scss
+++ b/src/components/atoms/container/container.module.scss
@@ -16,6 +16,6 @@
   display: grid;
 }
 
-.selection {
+.section {
   display: grid;
 }
